--- a/css/login.css
+++ b/css/login.css
@@ -1,7 +1,14 @@
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+:root {
+    --red-tone-font: #d12f28cc,
+    --orange-tone: #ff652f,
 }
 
 body {
@@ -23,7 +30,7 @@ body {
     width: 100%;
     max-width: 380px;
     padding: 80px 40px 40px;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, 0.55);
     border-radius: 10px;
     color: #fff;
 }
@@ -34,7 +41,7 @@ body {
     /* Verificar posição após aplicação de outros estilos */
     left: calc(50% - 12%); 
     width: 100px;
-    background: rgba(255, 255, 255, 0.6);
+    background: rgba(255, 255, 255, 0.55);
     border-radius: 50%
 }
 
@@ -42,7 +49,7 @@ body {
     text-align: center;
     margin-bottom: 2rem; 
     letter-spacing: 1px;
-    color: rgba(209, 47, 40, 0.8)
+    color: #ff652f;
 }
 
 .form .input-group { 
@@ -72,6 +79,57 @@ body {
     transition: .3s ease-out;
 }
 
+.form .input-group input:focus + label,
+.form .input-group input:valid + label {
+    transform: translateY(-18px);
+    color: #ff652f;
+    font-size: .8rem;
+}
+
+.submit-btn {
+    display: block;
+    margin-left: auto;
+    border: none;
+    outline: none;
+    background: #ff652f;
+    font-size: 1rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.forgot-password{
+    color: inherit;
+    text-decoration: none;
+}
+
 #forgot-password {
-    display: none;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 0;
+    z-index: 1;
+    background: #fff;
+    opacity: 0;
+    transition: .6s ease-out;
+}
+
+#forgot-password:target {
+    height: 100%;
+    opacity: 1;
+}
+
+.close {
+   position: absolute;
+   right: 1.1rem;
+   top: 0.5rem;
+   font-size: 2rem;
+   text-decoration: none;
+   color: inherit; 
 }
